--- a/bella_knudsen_ice_cream_website.html
+++ b/bella_knudsen_ice_cream_website.html
@@ -406,7 +406,7 @@
                 </div>
             </div>
         </body>
-        <div class="bottom"><a href="#title">Back to Top<img src="![arrow_white](https://user-images.githubusercontent.com/112576354/192885533-73214009-dd3f-46d7-829d-9604f7409d0c.svg)" alt="upward arrow symbol" class="arrow"></a></div>
+        <div class="bottom"><a href="#title">Back to Top<img src="icons/arrow_white.svg" alt="upward arrow symbol" class="arrow"></a></div>
     </main>
 </body>
 </html>
