--- a/project_1/bella_knudsen_ice_cream_website.html
+++ b/project_1/bella_knudsen_ice_cream_website.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://use.typekit.net/uoy8rxe.css">
+    <link rel="stylesheet" href="https://use.typekit.net/uoy8rxe.css">
     <style>
         div.shop{
             display: flex;
