--- a/project_1/bella_knudsen_ice_cream_website.html
+++ b/project_1/bella_knudsen_ice_cream_website.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://use.typekit.net/uoy8rxe.css">
     <link rel="stylesheet" href="https://use.typekit.net/uoy8rxe.css">
     <style>
+        main{
+            width: 1440px;
+        }
         div.shop{
             display: flex;
             width: 75%;
@@ -39,7 +42,7 @@
             width: 85%;
             text-align: center;
             margin: auto;
-            font-size: 1.5em;
+            font-size: 1em;
             padding: 0.5em 0;
         }
         .key{
@@ -124,7 +127,10 @@
         }
         .digital_pic{
             width: 100%;
-            border: 1px solid black;
+            border: 1px solid grey;
+        }
+        html {
+            scroll-behavior: smooth;
         }
     </style>
 </head>
