--- a/project_1/bella_knudsen_ice_cream_website.html
+++ b/project_1/bella_knudsen_ice_cream_website.html
@@ -43,7 +43,7 @@
             text-align: center;
             margin: auto;
             font-size: 1em;
-            padding: 0.5em 0;
+            padding: 0.75em 0 0.25em 0;
         }
         .key{
             margin: auto;
@@ -61,6 +61,7 @@
         }
         a{
             color: black;
+            text-decoration: none;
         }
         .info{
             width: 25%;
@@ -139,7 +140,6 @@
         }
         html{
             scroll-behavior: smooth;
-            text-decoration-line: none;
         }
     </style>
 </head>
