--- a/project_1/bella_knudsen_ice_cream_website.html
+++ b/project_1/bella_knudsen_ice_cream_website.html
@@ -7,6 +7,12 @@
     <title>Top 8 Ice Cream Shops in Central Pennsylvania</title>
     <link rel="stylesheet" href="https://use.typekit.net/uoy8rxe.css">
     <link rel="stylesheet" href="https://use.typekit.net/uoy8rxe.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <meta property="og:title" content="Top 8 Ice Cream Shops in Central Pennsylvania">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="images/the_jigger_shop.png">
+    <meta property="og:image" content="https://inknudsen.github.io/project_1/bella_knudsen_ice_cream_website.html">
+    <meta property="og:determiner" content="The">
     <style>
         main{
             width: 1440px;
