--- a/project_2/step_pages/step_1.html
+++ b/project_2/step_pages/step_1.html
@@ -4,41 +4,51 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            nav ul{
-                margin: 0;
-                padding: 0;
-            }
-            nav li{
-                list-style-type: none;
-                display: inline-block;
-            }
-            @media (max-width:1000px){
-                main{
-                    width: 1000px;
-                }
-            }
-        </style>
+        <title>Step 1</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="../favicon_package_v0.16/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../favicon_package_v0.16/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../favicon_package_v0.16/favicon-16x16.png">
+        <link rel="manifest" href="../favicon_package_v0.16/site.webmanifest">
+        <link rel="mask-icon" href="../favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="../stylesheet/step_page_stylesheet.css">
     </head>
     <body>
         <main>
             <nav>
                 <ul>
-                    <li><a href="../home_page/b_knudsen_navigation_practice.html">Home</a></li>
-                    <li><a href="../step_pages/step_1.html">Step 1</a></li>
-                    <li><a href="../step_pages/step_2.html">Step 2</a></li>
-                    <li><a href="../step_pages/step_3.html">Step 3</a></li>
-                    <li><a href="../step_pages/step_4.html">Step 4</a></li>
-                    <li><a href="../step_pages/step_5.html">Step 5</a></li>
-                    <li><a href="../step_pages/step_6.html">Step 6</a></li>
-                    <li><a href="../step_pages/step_7.html">Step 7</a></li>
-                    <li><a href="../step_pages/step_8.html">Step 8</a></li>
+                    <li><a href="../home_page/b_knudsen_homepage.html"><img src="../images/beeslight_logo.png" alt="beeslight logo" class="logo"></a></li>
+                    <li><a href="../step_pages/step_1.html"><img src="../images/Honercomb_Step_1.png" alt="1 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_2.html"><img src="../images/Honercomb_Step_2.png" alt="2 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_3.html"><img src="../images/Honercomb_Step_3.png" alt="3 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_4.html"><img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_5.html"><img src="../images/Honercomb_Step_5.png" alt="5 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_6.html"><img src="../images/Honercomb_Step_6.png" alt="6 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_7.html"><img src="../images/Honercomb_Step_7.png" alt="7 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_8.html"><img src="../images/Honercomb_Step_8.png" alt="8 in hexagon" class="hexagon"></a></li>
                 </ul>
             </nav>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium iure sint adipisci debitis, molestias saepe vitae! Delectus, beatae unde eaque quaerat expedita repudiandae mollitia quasi non nam nulla nesciunt quibusdam at quae quod veniam officia quis. Itaque adipisci saepe earum assumenda hic dolore. Molestiae nemo facere ex assumenda exercitationem eligendi pariatur ipsa, nulla deserunt! Dolor reprehenderit saepe voluptatum tempore rerum, optio doloremque dignissimos voluptatem alias corrupti atque delectus quisquam excepturi rem dolore nihil. Cum ipsa repellat expedita. Voluptatem doloribus ex magni adipisci a quis et. Quidem, dolor exercitationem. Reiciendis, eaque dolorem cum autem et nulla, tempora itaque dolores blanditiis ad incidunt facere quod explicabo reprehenderit necessitatibus laudantium sunt sint dolore nostrum aliquam dolor magni ducimus quasi facilis? Quasi modi, ut, harum inventore minima iure provident explicabo, delectus eius quae corporis eos sit totam asperiores dolore necessitatibus! Corrupti temporibus doloribus aliquid quibusdam amet quas, molestiae quis porro odio, ut facilis sapiente perspiciatis maxime. Rerum mollitia dignissimos, voluptate tempora quos facere cupiditate reprehenderit? Quidem repudiandae magni id nobis eveniet odio debitis, tempora illo accusamus quod quisquam facere blanditiis ullam tempore adipisci reprehenderit quae non esse, omnis dolores dicta error tenetur eligendi sint. Aliquam quos inventore voluptate facere aliquid. Perspiciatis dignissimos, repudiandae, eos vel vero, architecto natus facilis nobis amet culpa odit eaque aliquam sint iure delectus commodi! Ad in, consectetur sint, voluptates, praesentium nulla tempora dolores laboriosam tempore doloribus ipsa itaque assumenda voluptatibus perspiciatis! Magnam ut porro ab, similique distinctio minima deleniti adipisci neque assumenda. Et nemo dicta illo commodi praesentium, quae doloremque velit fugit molestiae ducimus numquam recusandae assumenda nihil sint nulla minima. Repudiandae maiores vero sequi nisi veniam. Tempore sint tempora nam totam, voluptates quidem ut maiores similique aliquam iusto provident minus ipsa, molestias quibusdam a laudantium reprehenderit excepturi exercitationem tenetur esse suscipit et? Quis sed rem esse quam quo!</p>
+            <h1>
+                <img src="../images/Honercomb_Step_1.png" alt="1 in hexagon" class="stepnumber">
+                Attaching the Candle Wick
+            </h1>
+            <div class="row">
+                <div>
+                    <img src="../images/step1.JPG" alt="attaching candle wick" class="half">
+                </div>
+                <div>
+                    <h2>Materials Needed for this Step:</h2>
+                    <ul>
+                        <li>Glue dot</li>
+                        <li>Candle tin</li>
+                        <li>Cotton wick</li>
+                    </ul>
+                    <h2>What to Do:</h2>
+                    <p>Take a glue dot and attach it to the bottom of the cotton candle wick.  Then firmly place the wick, glue dot down, to the bottom of the candle tin.</p>
+                    <a href="../step_pages/step_2.html"><img src="../images/next_step.png" alt="next step" class="button">
+                </div>
             </div>
-
+        </main>
     </body>
 </html>
