--- a/project_2/step_pages/step_2.html
+++ b/project_2/step_pages/step_2.html
@@ -4,40 +4,50 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            nav ul{
-                margin: 0;
-                padding: 0;
-            }
-            nav li{
-                list-style-type: none;
-                display: inline-block;
-            }
-            @media (max-width:1000px){
-                main{
-                    width: 1000px;
-                }
-            }
-        </style>
+        <title>Step 2</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="../favicon_package_v0.16/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../favicon_package_v0.16/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../favicon_package_v0.16/favicon-16x16.png">
+        <link rel="manifest" href="../favicon_package_v0.16/site.webmanifest">
+        <link rel="mask-icon" href="../favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="../stylesheet/step_page_stylesheet.css">
     </head>
     <body>
         <main>
             <nav>
                 <ul>
-                    <li><a href="../home_page/b_knudsen_navigation_practice.html">Home</a></li>
-                    <li><a href="../step_pages/step_1.html">Step 1</a></li>
-                    <li><a href="../step_pages/step_2.html">Step 2</a></li>
-                    <li><a href="../step_pages/step_3.html">Step 3</a></li>
-                    <li><a href="../step_pages/step_4.html">Step 4</a></li>
-                    <li><a href="../step_pages/step_5.html">Step 5</a></li>
-                    <li><a href="../step_pages/step_6.html">Step 6</a></li>
-                    <li><a href="../step_pages/step_7.html">Step 7</a></li>
-                    <li><a href="../step_pages/step_8.html">Step 8</a></li>
+                    <li><a href="../home_page/b_knudsen_homepage.html"><img src="../images/beeslight_logo.png" alt="beeslight logo" class="logo"></a></li>
+                    <li><a href="../step_pages/step_1.html"><img src="../images/Honercomb_Step_1.png" alt="1 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_2.html"><img src="../images/Honercomb_Step_2.png" alt="2 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_3.html"><img src="../images/Honercomb_Step_3.png" alt="3 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_4.html"><img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_5.html"><img src="../images/Honercomb_Step_5.png" alt="5 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_6.html"><img src="../images/Honercomb_Step_6.png" alt="6 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_7.html"><img src="../images/Honercomb_Step_7.png" alt="7 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_8.html"><img src="../images/Honercomb_Step_8.png" alt="8 in hexagon" class="hexagon"></a></li>
                 </ul>
             </nav>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis distinctio perspiciatis quod, reprehenderit ex tenetur ipsam quibusdam. Similique nesciunt assumenda id ut vitae nulla quaerat, tenetur accusantium quibusdam animi officia blanditiis. Doloremque animi saepe fuga impedit dolore, enim qui ratione consequuntur quia. Quibusdam, cumque dignissimos excepturi voluptatum laboriosam expedita, quidem nisi quia veritatis ullam odit dolore minima sequi, enim laborum. Maxime laboriosam deserunt amet obcaecati officiis voluptatibus mollitia quos possimus excepturi dolores! Accusamus dicta ad voluptatem eligendi vel facere hic possimus saepe aliquam quibusdam! Dicta eveniet assumenda natus voluptates excepturi maiores! Fugit itaque odio optio delectus placeat temporibus sequi sapiente, facere cumque expedita asperiores sed, laboriosam est explicabo nesciunt omnis quibusdam. Fugiat eaque nemo, quisquam velit explicabo consequuntur earum? Quis quos perferendis laborum dolor earum neque ea in et debitis voluptatem magnam laudantium explicabo dolorum, labore, quas aspernatur. Reprehenderit facere nostrum alias eos assumenda nobis saepe culpa cum iste. Nulla voluptates tempore dolore earum ex, sed cum veniam, adipisci sequi saepe alias quaerat ipsa non delectus impedit nesciunt ipsam ut qui harum asperiores eius nemo suscipit? Magnam asperiores eaque earum in neque commodi, vel laboriosam rem, repudiandae tempore magni numquam quos corporis eos nisi illo pariatur illum cum, quas necessitatibus maxime? Quidem voluptatum eos, laboriosam assumenda quia commodi sed perferendis, magni quam veniam dolores adipisci in sapiente necessitatibus voluptas minima iste doloribus a quae minus impedit. Officia facilis id totam eligendi porro, quaerat adipisci quia, perferendis ullam dolor itaque? Suscipit iure esse quisquam similique eveniet! Nostrum numquam iste, recusandae temporibus iure minima officia consequatur nam dolor vitae! Architecto totam quis maiores quidem inventore suscipit natus, ad, fugiat officiis quia perspiciatis dicta ea nemo. Qui, eius dolor adipisci at accusantium, modi repudiandae earum vel natus, molestias architecto expedita impedit doloremque nisi repellendus illum suscipit. Culpa inventore odio exercitationem quia at saepe earum nihil, non nobis eos fugiat ipsa sapiente repudiandae ducimus, veniam molestias harum fugit sequi obcaecati? Et eos ad quos ex eaque deleniti beatae molestias ipsam culpa minus sequi odit eveniet facere minima quasi, suscipit eligendi tenetur veniam quibusdam tempora atque corrupti, quae recusandae! Rerum, a! Minima deleniti delectus explicabo iusto? Officiis saepe quos atque! Aliquam quos molestias earum libero eveniet, cupiditate inventore expedita saepe aperiam tenetur ut facere aliquid. Obcaecati, repellat recusandae asperiores dolores accusamus amet facere quas enim accusantium temporibus expedita. Provident unde at ratione a veniam labore deleniti eligendi consequuntur culpa ut, distinctio iste, dolorum cumque libero sit perferendis doloribus harum veritatis animi? Suscipit voluptates et odio cupiditate exercitationem maxime ipsum libero accusantium culpa possimus temporibus expedita ad dicta voluptatem nostrum consectetur aliquid nobis animi eveniet, ex, quos illo reiciendis, esse enim. Repellat provident dolore excepturi. Maxime temporibus pariatur sit veniam voluptas rerum quisquam. Accusamus quaerat quasi, ad possimus voluptate aliquam distinctio modi temporibus excepturi numquam animi dolores libero perspiciatis at fugiat enim ea! Dolore voluptatum laborum, nam voluptate unde enim doloremque, voluptates sit incidunt porro deleniti provident ex eum quisquam eius? Perferendis provident dicta non deserunt quas maiores eligendi assumenda autem expedita beatae. Quisquam, nihil explicabo.</p>
+            <h1>
+                <img src="../images/Honercomb_Step_2.png" alt="2 in hexagon" class="stepnumber">
+                Stabilizing the Candle Wick
+            </h1>
+            <div class="row">
+                <div>
+                    <img src="../images/step2.JPG" alt="placing wick stabilizer" class="half">
+                </div>
+                <div>
+                    <h2>Materials Needed for this Step:</h2>
+                    <ul>
+                        <li>Candle tin</li>
+                        <li>Wick stabilizer</li>
+                    </ul>
+                    <h2>What to Do:</h2>
+                    <p>Place the wick stabilizer around the wick to ensure it stays properly centered.</p>
+                    <a href="../step_pages/step_3.html"><img src="../images/next_step.png" alt="next step" class="button">
+                </div>
             </div>
+        </main>
     </body>
 </html>
