--- a/project_2/step_pages/step_3.html
+++ b/project_2/step_pages/step_3.html
@@ -4,40 +4,51 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            nav ul{
-                margin: 0;
-                padding: 0;
-            }
-            nav li{
-                list-style-type: none;
-                display: inline-block;
-            }
-            @media (max-width:1000px){
-                main{
-                    width: 1000px;
-                }
-            }
-        </style>
+        <title>Step 3</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="../favicon_package_v0.16/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../favicon_package_v0.16/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../favicon_package_v0.16/favicon-16x16.png">
+        <link rel="manifest" href="../favicon_package_v0.16/site.webmanifest">
+        <link rel="mask-icon" href="../favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="../stylesheet/step_page_stylesheet.css">
     </head>
     <body>
         <main>
             <nav>
                 <ul>
-                    <li><a href="../home_page/b_knudsen_navigation_practice.html">Home</a></li>
-                    <li><a href="../step_pages/step_1.html">Step 1</a></li>
-                    <li><a href="../step_pages/step_2.html">Step 2</a></li>
-                    <li><a href="../step_pages/step_3.html">Step 3</a></li>
-                    <li><a href="../step_pages/step_4.html">Step 4</a></li>
-                    <li><a href="../step_pages/step_5.html">Step 5</a></li>
-                    <li><a href="../step_pages/step_6.html">Step 6</a></li>
-                    <li><a href="../step_pages/step_7.html">Step 7</a></li>
-                    <li><a href="../step_pages/step_8.html">Step 8</a></li>
+                    <li><a href="../home_page/b_knudsen_homepage.html"><img src="../images/beeslight_logo.png" alt="beeslight logo" class="logo"></a></li>
+                    <li><a href="../step_pages/step_1.html"><img src="../images/Honercomb_Step_1.png" alt="1 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_2.html"><img src="../images/Honercomb_Step_2.png" alt="2 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_3.html"><img src="../images/Honercomb_Step_3.png" alt="3 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_4.html"><img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_5.html"><img src="../images/Honercomb_Step_5.png" alt="5 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_6.html"><img src="../images/Honercomb_Step_6.png" alt="6 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_7.html"><img src="../images/Honercomb_Step_7.png" alt="7 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_8.html"><img src="../images/Honercomb_Step_8.png" alt="8 in hexagon" class="hexagon"></a></li>
                 </ul>
             </nav>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni asperiores aspernatur esse maxime dolorem dolorum, id perspiciatis ullam. Laudantium mollitia blanditiis delectus cumque earum ab. Quae placeat facilis omnis cum mollitia delectus fuga deleniti voluptate commodi? Earum, reprehenderit deleniti incidunt tempora porro laudantium nobis voluptatum odio vero, commodi ipsam inventore necessitatibus modi architecto facere quibusdam labore aut dolor. Vitae dolorum repellat expedita dolor magni laboriosam amet unde porro labore sed, voluptate pariatur soluta, illo, temporibus odio at explicabo sapiente aut eum velit obcaecati quo vero itaque? Distinctio veritatis molestiae eaque harum nesciunt temporibus quasi ab, dolor, assumenda error, sequi vitae consequatur tempora aperiam aliquid dolorum alias accusamus! Assumenda doloremque necessitatibus, sint, quod earum enim cupiditate quas omnis, harum deleniti similique modi distinctio! Quo eaque obcaecati at fuga itaque sequi facere nobis illo! Dolorem officia quo quas quasi voluptatibus deserunt eos omnis illo iure doloribus sint cum voluptatem minus quaerat, cupiditate tempora dolorum ea minima. Vero nisi quos consequuntur, quaerat voluptate illo magnam eius tenetur, iusto soluta eligendi labore delectus natus adipisci incidunt, veniam reiciendis magni voluptates ipsam. Commodi natus architecto praesentium culpa sit reprehenderit suscipit, dignissimos et, corporis repellat aspernatur quod quae magnam consectetur eaque dolor? Corrupti corporis sint officia.</p>
+            <h1>
+                <img src="../images/Honercomb_Step_3.png" alt="3 in hexagon" class="stepnumber">
+                Measuring and Adding Beeswax
+            </h1>
+            <div class="row">
+                <div>
+                    <img src="../images/step3.JPG" alt="pouring beeswax beads" class="half">
+                </div>
+                <div>
+                    <h2>Materials Needed for this Step:</h2>
+                    <ul>
+                        <li>Melting pot</li>
+                        <li>Measuring cup</li>
+                        <li>Beeswax beads</li>
+                    </ul>
+                    <h2>What to Do:</h2>
+                    <p>Measure out 1 cup of beeswax beads and pour them into the melting pot.</p>
+                    <a href="../step_pages/step_4.html"><img src="../images/next_step.png" alt="next step" class="button">
+                </div>
             </div>
+        </main>
     </body>
 </html>
