--- a/project_2/step_pages/step_7.html
+++ b/project_2/step_pages/step_7.html
@@ -4,41 +4,50 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <style>
-            nav ul{
-                margin: 0;
-                padding: 0;
-            }
-            nav li{
-                list-style-type: none;
-                display: inline-block;
-            }
-            @media (max-width:1000px){
-                main{
-                    width: 1000px;
-                }
-            }
-        </style>
+        <title>Step 7</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="../favicon_package_v0.16/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../favicon_package_v0.16/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../favicon_package_v0.16/favicon-16x16.png">
+        <link rel="manifest" href="../favicon_package_v0.16/site.webmanifest">
+        <link rel="mask-icon" href="../favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="../stylesheet/step_page_stylesheet.css">
     </head>
     <body>
         <main>
             <nav>
                 <ul>
-                    <li><a href="../home_page/b_knudsen_navigation_practice.html">Home</a></li>
-                    <li><a href="../step_pages/step_1.html">Step 1</a></li>
-                    <li><a href="../step_pages/step_2.html">Step 2</a></li>
-                    <li><a href="../step_pages/step_3.html">Step 3</a></li>
-                    <li><a href="../step_pages/step_4.html">Step 4</a></li>
-                    <li><a href="../step_pages/step_5.html">Step 5</a></li>
-                    <li><a href="../step_pages/step_6.html">Step 6</a></li>
-                    <li><a href="../step_pages/step_7.html">Step 7</a></li>
-                    <li><a href="../step_pages/step_8.html">Step 8</a></li>
+                    <li><a href="../home_page/b_knudsen_homepage.html"><img src="../images/beeslight_logo.png" alt="beeslight logo" class="logo"></a></li>
+                    <li><a href="../step_pages/step_1.html"><img src="../images/Honercomb_Step_1.png" alt="1 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_2.html"><img src="../images/Honercomb_Step_2.png" alt="2 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_3.html"><img src="../images/Honercomb_Step_3.png" alt="3 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_4.html"><img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_5.html"><img src="../images/Honercomb_Step_5.png" alt="5 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_6.html"><img src="../images/Honercomb_Step_6.png" alt="6 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_7.html"><img src="../images/Honercomb_Step_7.png" alt="7 in hexagon" class="hexagon"></a></li>
+                    <li><a href="../step_pages/step_8.html"><img src="../images/Honercomb_Step_8.png" alt="8 in hexagon" class="hexagon"></a></li>
                 </ul>
             </nav>
-            <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt aliquam corporis, nobis optio facere aspernatur dolorum maxime eligendi inventore, eius sit placeat pariatur laborum, ipsa quasi dolorem natus! Quidem magni repellendus exercitationem aperiam dolor vel! Quisquam blanditiis natus magnam quaerat ipsam nulla animi hic ex architecto, praesentium in et cumque. Ducimus quasi quis molestias quia ea minus, quo repellat illum doloribus tempore ab beatae cumque facilis reprehenderit! Esse autem aut, praesentium possimus quia veritatis ducimus consequuntur maxime modi ab quaerat repudiandae quos commodi earum fuga quasi eum exercitationem doloribus voluptas hic ipsa aperiam, iste corporis! Minima iste suscipit, sunt quae provident amet voluptates rerum, ipsum veritatis officia iusto delectus at, ducimus natus maxime corrupti! Debitis deleniti quia ut possimus eaque, veniam ducimus, pariatur quisquam id, repudiandae similique! Deleniti accusamus repellat atque facere, vero minima modi cum magnam dignissimos totam et nostrum ut distinctio asperiores sapiente aut. Harum sint laborum aliquid? Ducimus adipisci atque error quod veritatis dolor mollitia impedit voluptatum quas consequatur animi blanditiis quo, aut rem dolore amet odio? Omnis iusto voluptate fugiat nam veniam tempora, cupiditate quasi rerum consequatur provident ipsam sit ut id perspiciatis eveniet cumque sapiente maiores exercitationem laudantium harum alias voluptates eos numquam excepturi? Ipsum alias quasi, earum exercitationem quam illo molestias possimus explicabo laborum voluptates dolorem debitis saepe? Veritatis cum quam recusandae a dolores atque voluptatum. Commodi qui itaque quos quisquam tenetur mollitia, nobis cumque quia veniam! Id, eveniet accusantium alias corporis error sequi ducimus minus repellendus molestiae, totam maiores, assumenda cum. Quia, exercitationem.</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, ipsam cupiditate iusto distinctio qui minima vero nisi modi molestias sequi corporis ad nulla nam maiores atque harum sapiente officia reiciendis eius voluptate recusandae. At modi blanditiis, doloribus quae ipsa numquam rem animi eum neque iusto reiciendis voluptatibus ipsum nihil, quam fugiat! Labore sit dolor maxime id. Qui quod, minus error blanditiis fugiat molestias. Ut recusandae obcaecati mollitia nisi consectetur ratione saepe tempora temporibus eos? Aut quis eius perferendis amet saepe, et voluptatum dolorum iure. Ex esse nulla accusantium aperiam sint, quod nesciunt. Nisi vitae ducimus sunt cum sint consequuntur illo magni necessitatibus nulla animi vero, natus accusamus assumenda fugit exercitationem debitis id non voluptate molestiae, soluta possimus obcaecati officia ipsum? Quibusdam cum officiis autem beatae architecto in deleniti nostrum ducimus distinctio. Aspernatur cumque sit doloribus, dolore omnis inventore perspiciatis laudantium corrupti eligendi suscipit voluptas, nemo, dignissimos excepturi aliquid iure ut ex nostrum nam quae magnam ipsam placeat quisquam. Asperiores maxime accusantium totam molestias quibusdam magni, ea vitae consequuntur magnam qui sunt non fugit illo, iure nulla. Nesciunt ullam laborum voluptate quas rerum nemo suscipit minus. Veritatis porro aperiam accusantium ipsam debitis excepturi quis obcaecati ratione modi illo ut qui, vitae aliquam sunt, culpa veniam. Voluptate ducimus, nulla corporis vero voluptas facere dolorum temporibus. Consequuntur aliquam dicta, alias libero quis cum quas dolorum sed at quisquam suscipit optio, laborum aperiam facilis unde. Cupiditate odio reiciendis nemo. Amet magnam incidunt temporibus sed voluptate laboriosam assumenda excepturi dignissimos reprehenderit nobis culpa reiciendis praesentium repellendus illo odio fugit quae, voluptatem ipsum non asperiores? At veniam ad unde sequi sed nisi assumenda commodi est libero quia sit ipsa fugit consectetur aspernatur doloremque, ducimus modi nobis nesciunt vitae adipisci itaque illum deserunt quisquam? Quia fugit blanditiis dolores possimus repellat accusamus asperiores magni libero veritatis? Eligendi eum ratione aliquid numquam placeat a odio velit aspernatur laudantium? Mollitia dolorum, beatae blanditiis impedit natus error autem adipisci fugit molestias quae, ad provident deserunt quaerat iste dignissimos quas! Voluptate possimus ipsum non libero officiis tenetur pariatur! Consequuntur magni, accusamus eaque repellat quam vero iusto sequi, quas rem ratione expedita voluptatibus optio pariatur officia! Laboriosam ex accusantium rem! Nemo aspernatur beatae ratione, quod aperiam fugiat ipsa! Eius iure eveniet sapiente illum, error laudantium fugit tempore ex quia incidunt officiis harum necessitatibus eos optio deleniti, fugiat doloribus adipisci officia odio doloremque. Libero odio sit, tempora nobis consectetur cupiditate? At facilis obcaecati consectetur odio commodi atque, quos expedita laboriosam blanditiis ducimus maiores incidunt accusamus itaque illum quis repellat error. Corporis nobis iste delectus sed magni harum omnis ad temporibus possimus dicta quas labore voluptatibus sit voluptatum repellendus, culpa magnam iusto maiores? Culpa iure voluptatem ipsum ex officia voluptas numquam amet mollitia consequuntur ea!</p>
+            <h1>
+                <img src="../images/Honercomb_Step_7.png" alt="7 in hexagon" class="stepnumber">
+                Setting the Candle Wax
+            </h1>
+            <div class="row">
+                <div>
+                    <img src="../images/step7.JPG" alt="pouring melted wax" class="half">
+                </div>
+                <div>
+                    <h2>Materials Needed for this Step:</h2>
+                    <ul>
+                        <li>Melted wax</li>
+                        <li>Candle tin</li>
+                    </ul>
+                    <h2>What to Do:</h2>
+                    <p>Carefully but quickly pour melted wax into prepared candle tin and wait for it to cool.</p>
+                    <a href="../step_pages/step_8.html"><img src="../images/next_step.png" alt="next step" class="button">
+                </div>
             </div>
+        </main>
     </body>
 </html>
