--- a/project_2/step_pages/step_4.html
+++ b/project_2/step_pages/step_4.html
@@ -15,20 +15,22 @@
         <link rel="stylesheet" href="../stylesheet/step_page_stylesheet.css">
     </head>
     <body>
-        <main>
+        <div class="bar">
             <nav>
                 <ul>
-                    <li><a href="../home_page/b_knudsen_homepage.html"><img src="../images/beeslight_logo.png" alt="beeslight logo" class="logo"></a></li>
+                    <li><a href="../b_knudsen_homepage.html"><img src="../images/beeslight_logo.png" alt="beeslight logo" class="logo"></a></li>
                     <li><a href="../step_pages/step_1.html"><img src="../images/Honercomb_Step_1.png" alt="1 in hexagon" class="hexagon"></a></li>
                     <li><a href="../step_pages/step_2.html"><img src="../images/Honercomb_Step_2.png" alt="2 in hexagon" class="hexagon"></a></li>
                     <li><a href="../step_pages/step_3.html"><img src="../images/Honercomb_Step_3.png" alt="3 in hexagon" class="hexagon"></a></li>
-                    <li><a href="../step_pages/step_4.html"><img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="hexagon"></a></li>
+                    <li class="gray"><a href="../step_pages/step_4.html"><img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="hexagon"></a></li>
                     <li><a href="../step_pages/step_5.html"><img src="../images/Honercomb_Step_5.png" alt="5 in hexagon" class="hexagon"></a></li>
                     <li><a href="../step_pages/step_6.html"><img src="../images/Honercomb_Step_6.png" alt="6 in hexagon" class="hexagon"></a></li>
                     <li><a href="../step_pages/step_7.html"><img src="../images/Honercomb_Step_7.png" alt="7 in hexagon" class="hexagon"></a></li>
                     <li><a href="../step_pages/step_8.html"><img src="../images/Honercomb_Step_8.png" alt="8 in hexagon" class="hexagon"></a></li>
                 </ul>
             </nav>
+        </div>
+        <main>
             <h1>
                 <img src="../images/Honercomb_Step_4.png" alt="4 in hexagon" class="stepnumber">
                 Melting the Candle Wax
