--- a/responsive-bootstrap-page/exercise-10-26-22.html
+++ b/responsive-bootstrap-page/exercise-10-26-22.html
@@ -86,13 +86,13 @@
     </script>
   </head>
 <body>
-   <button id="toggle-nav"><img src="../menu_FILL0_wght400_GRAD0_opsz48.svg" alt="hamburger menu icon"></button>
+   <button id="toggle-nav"><img src="../responsive-bootstrap-page/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="hamburger menu icon"></button>
   <nav id="primary-nav">
     <ul>
-      <li><a href="../exercise-10-26-22.html" class="red">Red</a></li>
-      <li><a href="../exercise-10-26-22.html" class="blue">Blue</a></li>
-      <li><a href="../exercise-10-26-22.html" class="yellow">Yellow</a></li>
-      <li><a href="../exercise-10-26-22.html" class="green">Green</a></li>
+      <li><a href="../responsive-bootstrap-page/exercise-10-26-22.html" class="red">Red</a></li>
+      <li><a href="../responsive-bootstrap-page/exercise-10-26-22.html" class="blue">Blue</a></li>
+      <li><a href="../responsive-bootstrap-page/exercise-10-26-22.html" class="yellow">Yellow</a></li>
+      <li><a href="../responsive-bootstrap-page/exercise-10-26-22.html" class="green">Green</a></li>
     </ul>
    </nav>
   <div class="container">
