--- a/project-4/gallery-kicks-for-splash.html
+++ b/project-4/gallery-kicks-for-splash.html
@@ -38,5 +38,15 @@
             </nav>
         </div>
     </div>
+    <div class="grid">
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-1.jpeg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-2.jpeg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-3.jpeg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-4.jpg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-5.jpeg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-6.jpeg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-7.jpeg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-8.jpg"></div>
+        <div class="module"><img class="gallery-pic" src="./gallery-pic-9.jpeg"></div>
 </body>
 </html>
