--- a/project-4/order-kicks-for-splash.html
+++ b/project-4/order-kicks-for-splash.html
@@ -38,5 +38,18 @@
             </nav>
         </div>
     </div>
+    <form>
+        <label for="firstname">First Name</label>
+        <input id="firstname" name="firstname" type="text">
+        <label for="email">Enter your email</label>
+        <input id="email" type="email" required></imput>
+        <input type="submit" value="Enter my name"></imput>
+        <select name="cars" id="cars">
+            <option value="red">red</option>
+            <option value="yellow">yellow</option>
+            <option value="blue">blue</option>
+        </select>
+    </form>
+   
 </body>
 </html>
